<resources>
    <string name="app_name" translatable="false">Star</string>

    <string name="login">Login</string>
    <string name="get_token">Get Token</string>
    <string name="share">Share</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <!--Content Description-->
    <string name="subreddit_image">Subreddit Image</string>
    <string name="up_vote">Up vote</string>
    <string name="down_vote">Down vote</string>
    <string name="sort_order">Sort Order</string>
    <string name="billymcd">billymcd</string>
    <string name="sample_time">59m</string>
    <string name="dashboard">Dashboard</string>
    <string name="detail_reddit">Detail Reddit</string>
    <string name="comments_counts">472</string>
    <string name="upvote_counts">7586</string>
    <string name="sample_text">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="sample_reddit_title">Space - 5h</string>
    <string name="sample_comment">publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="sample_username">u/Auggernaut88</string>
    <string name="sample_category">r/funny - 3hr - imgur</string>
    <string name="comments_title">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="reply">Reply</string>
    <string name="home">Home</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="friends">Friends</string>
    <string name="about">About</string>
    <string name="extras">Extras</string>
    <string name="faq">FAQ</string>
    <string name="subreddits">Subreddits</string>
    <string name="moderating">Moderating</string>
    <string name="enter_community_name">Enter Community Name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="attempting_login">Attempting Login</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="add_new_account">Add new account</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="reddit_login">Reddit Login</string>

    <array name="scope">
        <item>creddits</item>
        <item>modcontributors</item>
        <item>modmail</item>
        <item>modconfig</item>
        <item>subscribe</item>
        <item>wikiread</item>
        <item>wikiedit</item>
        <item>vote</item>
        <item>mysubreddits</item>
        <item>submit</item>
        <item>modlog</item>
        <item>modposts</item>
        <item>modflair</item>
        <item>save</item>
        <item>modothers</item>
        <item>read</item>
        <item>privatemessages</item>
        <item>report</item>
        <item>identity</item>
        <item>livemanage</item>
        <item>account</item>
        <item>modtraffic</item>
        <item>edit</item>
        <item>modwiki</item>
        <item>modself</item>
        <item>history</item>
        <item>flair</item>
    </array>

    <array name="scope_2">
        <item>flair</item>
        <item>edit</item>
        <item>identity</item>
    </array>

    <array name="scope_3">
        <item>creddits</item>
        <item>edit</item>
        <item>flair</item>
        <item>history</item>
        <item>identity</item>
        <item>vote</item>
        <item>submit</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_data">Get Data</string>
    <string name="enter_your_reply">Enter your reply</string>
    <string name="send">Send</string>

    <string name="write_something">Write Something</string>
    <string name="please_login">Please Login</string>
    <string name="hot">Hot</string>
    <string name="new_text">NEW</string>
    <string name="top">Top</string>
    <string name="favorite">Favourites</string>
    <string name="my_favorites">My Favourites</string>
    <string name="no_items">No Items</string>
    <string name="search_hint">Type here</string>
    <string name="voice_search">Voice Search</string>
    <string name="posts">Posts</string>
    <string name="subscribe">Subscribe</string>
    <string name="more">MORE</string>
    <string name="success">Success</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">Nothing to display</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="popular">Popular</string>
    <string name="front_page">Front Page</string>
    <string name="subreddit">Subreddit</string>

    <string name="subreddit_name">Subreddit Name</string>
    <string name="apply">Apply</string>
    <string name="configure_widget">Configure Widget</string>
    <string name="subreddit_name_must_not_be_empty">Subreddit name must not be empty</string>
    <string name="no_name">No name</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for ImgurData & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="logout">Log out</string>
    <string name="user_logged_out">User Logged Out</string>
    <string name="loading_comments">Loading Comments</string>
    <string name="fav">Fav</string>
    <string name="subs">Subs</string>
    <string name="empty" />
    <string name="empty_fav">You have not selected any favorites yet</string>
    <string name="save">Save</string>
    <string name="my_subreddits">My Subreddits</string>
    <string name="credententials_updated">Credentials Updated</string>
    <string name="cannot_retrieve_name">Cannot retrieve name</string>
    <string name="share_using">Share using</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="sample_name">android.studio@android.com</string>
    <string name="subreddit_icon">Subreddit icon</string>
    <string name="article_thumbnail">Article thumbnail</string>
    <string name="refresh_icon">Refresh icon</string>
    <string name="refresh_widget">Refresh widget</string>
    <string name="icon">Icon</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="tools_text">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="online_number">123456</string>
    <string name="sample_number">444</string>
    <string name="change_view">Change view</string>
    <string name="card_view">Card</string>
    <string name="list_view">List</string>
    <string name="filter">Filter</string>
    <string name="_new">New</string>
    <string name="controversial">Controversial</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all_time">All Time</string>
    <string name="rising">Rising</string>
    <string name="gif">GIF</string>
    <string name="youtube">Youtube</string>
    <string name="domain">domain</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="retry">Retry</string>
    <string name="sort_by_relevance">Sort by relevance</string>
    <string name="relevance">Relevance</string>
    <string name="see_more">See More</string>
    <string name="comments">Comments</string>
    <string name="refresh_token">Refresh Token</string>

</resources>
