<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:padding="8dp"
        android:text="@string/subscribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/rb_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_popular"
            android:padding="8dp"
            android:text="@string/popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_front_page"
            android:padding="8dp"
            android:text="@string/front_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/rb_subreddit"
            android:padding="8dp"
            android:text="@string/subreddit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:visibility="gone"
            android:id="@+id/rb_fav"
            android:padding="8dp"
            android:text="@string/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <android.support.design.widget.TextInputLayout
        android:visibility="gone"
        android:id="@+id/tl_subreddit"
        android:layout_width="match_parent"
        android:hint="@string/subreddit_name"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_subreddit"
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_apply"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:background="@color/light_blue_500"
            android:text="@string/apply"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>
</LinearLayout>