<?xml version="1.0" encoding="utf-8"?>
<com.rahul_lohra.redditstar.helper.CardViewZoom xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_zoom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="2dp"
    android:layout_marginStart="2dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    app:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">


            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/article_thumbnail"
                tools:src="@mipmap/ic_launcher"
                android:transitionName="profile" />

            <com.rahul_lohra.redditstar.helper.LabelTextView
                android:id="@+id/label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:background="@drawable/rect_filled"
                android:backgroundTint="@color/black_alpha_40"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="@string/gif" />


            <TextView
                android:id="@+id/tv_domain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="8dp"
                android:background="@drawable/rect_filled"
                android:backgroundTint="@color/black_alpha_40"
                android:fontFamily="sans-serif-light"
                android:padding="2dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone"
                tools:text="@string/domain" />

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="3"
            android:textColor="@color/black"
            tools:text="@string/sample_text" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            tools:text="@string/sample_reddit_title" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_up_vote"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/up_vote"
                app:srcCompat="@drawable/ic_arrow_upward" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                tools:text="@string/upvote_counts" />

            <TextView
                android:id="@+id/tv_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:drawableEnd="@drawable/ic_chat_bubble"
                android:drawablePadding="8dp"
                android:gravity="center"
                tools:text="@string/comments_counts" />

            <ImageView
                android:id="@+id/image_down_vote"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/down_vote"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_arrow_downward" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_share"
            android:layout_width="84dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/share"
            android:drawableEnd="@drawable/ic_share_black"
            android:drawablePadding="2dp"
            android:text="@string/share"
            android:visibility="gone" />

    </LinearLayout>


</com.rahul_lohra.redditstar.helper.CardViewZoom>
