<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:clickable="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/subreddit_icon"
            android:layout_gravity="center_horizontal"
            android:id="@+id/image_view"
            android:layout_height="56dp"
            android:layout_width="56dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/ic_launcher"
             />

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:contentDescription="@string/share"
            android:drawablePadding="24dp"
            android:text="@string/app_name" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>
    </android.support.v7.widget.CardView>
