<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<View
    android:layout_height="0dp"
    android:background="@color/colorPrimaryDark"
    tools:layout_constraintTop_creator="1"
    tools:layout_constraintBottom_creator="1"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:layout_constraintLeft_creator="1"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/view"
    android:layout_width="4dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_username"
        android:text="@string/billymcd"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/view"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:id="@+id/tv_comment"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintLeft_toLeftOf="@+id/tv_username"
        android:text="@string/sample_comment"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:text="@string/sample_time"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:id="@+id/tv_time"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_username" />

    <TextView
        android:text="539"
        android:layout_width="65dp"
        android:layout_height="23dp"
        android:id="@+id/tv_upvote_count"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_username"
        app:layout_constraintRight_toLeftOf="@+id/tv_time"
        android:layout_marginEnd="8dp" />
    <View
        android:layout_width="match_parent"
        android:background="@color/grey_500"
        android:id="@+id/view2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_reply"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        android:layout_height="1dp" />

    <TextView
        android:drawablePadding="1dp"
        android:gravity="center"
        android:text="@string/reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reply"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_comment"
        app:layout_constraintRight_toLeftOf="@+id/include"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_reply" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        layout="@layout/item_vote"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_comment"
        android:id="@+id/include" />

</android.support.constraint.ConstraintLayout>